# SentryOps

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: alembic.ini  main.py  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_alert_tables.py
backend/app/api/: __init__.py  ai_chat.py  alert_suggestions.py  alerts.py  approvals.py  changes.py  cluster.py  correlation.py  dashboards.py  deployments.py  deployments_history.py  event_stream.py  events.py  github_webhooks.py  investigations.py  logs.py  metrics.py  metrics_query.py  namespaces.py  nodes.py  pods.py  traces.py  ws_logs.py
backend/app/core/: config.py  k8s_client.py
backend/app/db/: database.py
backend/app/db/clickhouse/: client.py  migrate.py
backend/app/db/models/: alerts.py  (+4 more)
backend/app/guardian/: anomaly_detector.py  approval.py  config.py  graph.py  scheduler.py  state.py
backend/app/otel/: metric_prpocessor.py  otlp_receiver.py  trace_processor.py
backend/app/services/: alert_engine.py  alert_guardian_bridge.py  cluster_service.py  correlation.py  deployment_service.py  event_correlator.py  log_broadcaster.py  log_ingester.py  log_parser.py  metrics_service.py  namespace_service.py  node_service.py  notifications.py  pod_service.py
backend/app/workers/: event_collector.py  log_collector.py  metric_collector.py  prometheus_scraper.py  resource_snapshotter.py
backend/experiments/ai/: 01_bedrock_basic.py  02_langchain_agent_bedrock.py  03_langfuse_integration.py  04_middleware_patterns.py  05_full_sre_agent.py  _config.py
(+119 files in other folders)
