[project]
name = "sentryops"
version = "0.2.0"
description = "Kubernetes observability and AI SRE platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "websockets>=12.0",
    "wsproto>=1.2.0",

    # Kubernetes
    "kubernetes>=31.0.0",

    # PostgreSQL (async)
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # ClickHouse
    "clickhouse-connect>=0.7.19",

    # Redis (async, with hiredis for performance)
    "redis[hiredis]>=5.2.0",
]

[project.optional-dependencies]
ai = [
    "langchain>=1.3.0",
    "langchain-aws>=1.6.0",
    "langgraph>=1.2.0",
    "langfuse>=4.0.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
